syntax = "proto3";

package poverty.api.poverty.activity.v1;

option go_package = "./v1;v1";
option java_multiple_files = true;
option java_package = "poverty.api.poverty.activity.v1";
option java_outer_classname = "ActivityV1";

import "google/api/annotations.proto";
import "api/poverty/activity/poverty_activity.proto";

service Activity{

  // GetActivity 获取指定的活动信息
  rpc GetActivity (GetActivityRequest) returns (GetActivityReply) {
    option (google.api.http) = {
      get: "/poverty/api/v1/activity",
      additional_bindings:{
        get: "/poverty/client/v1/activity",
      }
    };
  }

  // ListActivity 获取活动信息列表
  rpc ListActivity (ListActivityRequest) returns (ListActivityReply) {
    option (google.api.http) = {
      get: "/poverty/api/v1/activities",
      additional_bindings:{
        get: "/poverty/client/v1/activities",
      }
    };
  }

  // CreateActivity 创建活动信息
  rpc CreateActivity (CreateActivityRequest) returns (CreateActivityReply) {
    option (google.api.http) = {
      post: "/poverty/api/v1/activity",
      body: "*"
    };
  }

  // UpdateActivity 更新活动信息
  rpc UpdateActivity (UpdateActivityRequest) returns (UpdateActivityReply) {
    option (google.api.http) = {
      put: "/poverty/api/v1/activity",
      body: "*"
    };
  }

  // DeleteActivity 删除活动信息
  rpc DeleteActivity (DeleteActivityRequest) returns (DeleteActivityReply) {
    option (google.api.http) = {
      delete: "/poverty/api/v1/activity",
    };
  }

}